--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <h2 id="count-el">0</h2>
 
     <!-- "increment button with id increment-btn" -->
-    <button id ="increment-btn" onclick="increment()">increment</button>
+    <button id ="increment-btn" onclick="increment()">Increment</button><br>
+    <button id ="save-btn" onclick="save()">Save</button>
+    <p id="save-el">Previous Entries:</p>
     <script src="index.js"></script>
     </body>
 </html>
