--- a/blackjackgame/index.html
+++ b/blackjackgame/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Blackjack</h1>
         <p id="message-el">want to play a round?</p>
-        <p id="card-el">Cards:</p>
+        <p id="cards-el">Cards:</p>
         <p id="sum-el">Sum:</p>
         <button onclick="startGame()">START GAME</button>
         <br>
