--- a/blackjackgame/index.html
+++ b/blackjackgame/index.html
@@ -10,6 +10,7 @@
         <button onclick="startGame()">START GAME</button>
         <br>
         <button onclick="newCard()">NEW CARD</button>
+        <p id="player-el"></p>
         <script src="index.js"></script>
     </body>
 </html>
