--- a/chromeetension/index.html
+++ b/chromeetension/index.html
@@ -4,8 +4,7 @@
     </head>
     <body>
         <input type="text" id="input-el">
-        <br>
-        <button id="input-el">SAVE INPUT</button>
+        <button id="input-el" onclick="saveInput()">SAVE INPUT</button>
         <script src="index.js"></script>
     </body>
 </html>
