--- a/chromeetension/index.html
+++ b/chromeetension/index.html
@@ -4,7 +4,8 @@
     </head>
     <body>
         <input type="text" id="input-el">
-        <button id="input-el" onclick="saveInput()">SAVE INPUT</button>
+       
+        <button id="btn-el" onclick="saveInput()">SAVE INPUT</button>
         <script src="index.js"></script>
     </body>
 </html>
