--- a/08chromeetension/index.html
+++ b/08chromeetension/index.html
@@ -5,7 +5,8 @@
     <body>
         <input type="text" id="input-el">
        
-        <button id="btn-el" onclick="saveInput()">SAVE INPUT</button>
+        <button id="btn-el">SAVE INPUT</button>
+        <ul id="ul-el"></ul>
         <script src="index.js"></script>
     </body>
 </html>
